--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>Dira Afwa Mardanela</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/w3css/3/w3.css">
@@ -14,8 +15,8 @@
 
 body {
   
-  background-image: white;
-  font-family: "Roboto", sans-serif;
+  background-image: indianred;
+  font-family: monospace;
   margin: 0;
 }
 p{
@@ -58,14 +59,14 @@ h2{
   padding-top: 30px;
   padding-left: 50px;
   padding-right: 50px;
-  height: 2700px;
+  height: 2300px;
 
 }
 .column2 {
   float: right;
   width: 70%;
   padding: 10px;
-  height: 2700px;
+  height: 2300px;
   padding: 30px;
 }
 .row:after {
@@ -104,9 +105,8 @@ h2{
 
 .indonesian {width: 100%; background-color:maroon ;}
 .English {width: 85%; background-color: brown;}
-.Korean {width: 70%; background-color: sienna;}
-.Turkish {width: 40%; background-color: saddlebrown;}
-.German {width: 30%; background-color: peru;}
+.Korean {width: 30%; background-color: sienna;}
+
 
 @media screen and (max-width:600px) {
   .column {
@@ -120,10 +120,11 @@ h2{
 <body>
 
 
-<div class="hero-image">
+<div class="hero-image" style="background-color: indianred">
   <div class="hero-text">
-     <img src="img_avatar.jpg" alt="avatar" class="avatar">
-    <h1 style="font-size:50px">Dira Afwa Mardanela</h1>
+    <img src="img_avatar.jpg" alt="avatar" class="avatar">
+    <h1 style="font-size:40px">Dira Afwa Mardanela</h1>
+    
   </div>
 </div>
 
@@ -135,9 +136,9 @@ h2{
     <div class="w3-container">
   <h2>About Me</h2>
   <h3> <img src="icon_birth.png" style="width: 30px; height: 25px">Birth</h3>
-  <p style="font-size: 20px">Banjarnegara,November 13th 1999</p>
+  <p style="font-size: 18px">Banjarnegara,November 13th 1999</p>
   <h3><img src="icon_place.png" style="width: 25px; height: 25px">Address</h3>
-  <p style="font-size: 20px"> Griya Bandung Indah <br>
+  <p style="font-size: 18px"> Griya Bandung Indah <br>
       Blok C1, No. 32<br>
       Ciwastra<br>
       West Java, 40288
@@ -150,13 +151,13 @@ h2{
 
   <h2> Contact</h2>
   <h3> <img src="icon_phone.png" style="width: 25px; height: 25px">Phone</h3>
-  <p style="font-size: 20px"> 085385365551 <br>
+  <p style="font-size: 18px"> 085385365551 <br>
       082117896912</p>
   <h3> <img src="icon_mail.png" style="width: 25px; height: 25px">Email</h3>
-  <p style="font-size: 20px"> dirafhwa13@gmail.com <br>
+  <p style="font-size: 18px"> dirafhwa13@gmail.com <br>
       diramardanela@gmail.com</p>
   <h3> Social Media</h3>
-  <p style="font-size: 20px"> <img src="icon_wa.png" style="width: 25px; height: 25px"> Whatsapp : 085385365551 <br> <img src="icon_line.png" style="width: 25px; height: 25px"> Line : dhimira <br> <img src="icon_ig.png" style="width: 25px; height: 25px"> Instagram : diraafwa </p>
+  <p style="font-size: 18px"> <img src="icon_wa.png" style="width: 25px; height: 25px"> Whatsapp : 085156263789 <br> <img src="icon_line.png" style="width: 25px; height: 25px"> Line : diraafwam <br> <img src="icon_ig.png" style="width: 25px; height: 25px"> Instagram : diraafwam </p>
   <hr>
 
 </div>
@@ -165,41 +166,51 @@ h2{
 <div class="column2" style="background-color: peachpuff">
 
     <h1><img src="icon_prof.png" style="width: 5%; height: 5%;padding-right: 10px ">Profile</h1>
-    <p style="font-size: 20px"> Hello ! My name is Dira Afwa Mardanela. I usually called Dira . I was studying at Telkom University majored in Informatics. I am now 19 years old. I am a reliable
+    <p style="font-size: 18px"> Hello ! My name is Dira Afwa Mardanela. I usually called Dira . I was studying at Telkom University majored in Informatics. I am now 20 years old. I am a reliable
 and loyal person so I can make a harmony and
 cooperation between people. </p>
     <hr>
 
     <h2><img src="icon_grad.png" style="width: 25px; height: 25px">  Education</h2>
         <h2> • 2005-2009</h2> 
-        <p style="font-size: 20px"> SD Asy-Syifa 1 Bandung </p>
+        <p style="font-size: 18px"> SD Asy-Syifa 1 Bandung </p>
         <h2> • 2009-2011</h2>
-        <p style="font-size: 20px">SD Sudagaran 1 Banyumas</p>
+        <p style="font-size: 18px">SD Sudagaran 1 Banyumas</p>
         <h2> • 2011-2014 </h2>
-        <p style="font-size: 20px">SMP Negeri 1 Susukan </p>
+        <p style="font-size: 18px">SMP Negeri 1 Susukan </p>
         <h2> • 2014-2017</h2>
-        <p style="font-size: 20px">SMA Negeri 1 Banyumas</p>
+        <p style="font-size: 18px">SMA Negeri 1 Banyumas</p>
 <hr>
 <h2><img src="icon_bag.png" style="width: 25px; height: 25px">   Experience </h2>
 <h2> • 2017 - 2018 </h2>
-<p style="font-size: 20px"> Telkom University Choir <br>
+<p style="font-size: 18px"> Telkom University Choir <br>
     As a Event Organization </p>
+<h2> • 2019 - 2020</h2>
+<p style="font-size: 18px"> Student Choir Executive Body Telkom University Choir <br>
+    As a Secretary </p>
 <hr>
 
 <h2> <img src="icon_ac.png" style="width: 25px; height: 25px">Achievement</h2>
-<p style="font-size: 25px">
-  • Gold A Medal Folklore (Category Champion)
-   Soegijapranata Choral Festival 2018, Telkom
-   University Choir<br><br>
-  • Gold B Medal Mixed Choir Soegijapranata
-   Choral Festival 2018, Telkom University
-   Choir<br><br>
-  • Gold B Medal Sacred Music Soegijapranata
-   Choral Festival 2018, Telkom University 
-   Choir<br><br>
-  • 2nd Runner Up Grand Prix Soegijapranata
-   Choral Festival 2018, Telkom University
-   Choir
+<p style="font-size: 15px">
+  <h3> 1. Soegijapranata Choral Fextival 2018 </h3>
+      • Gold A Medal Folklore (Category Champion)
+        Soegijapranata Choral Festival 2018, Telkom
+        University Choir<br><br>
+      • Gold B Medal Mixed Choir Soegijapranata
+        Choral Festival 2018, Telkom University
+        Choir<br><br>
+      • Gold B Medal Sacred Music Soegijapranata
+        Choral Festival 2018, Telkom University 
+        Choir<br><br>
+      • 2nd Runner Up Grand Prix Soegijapranata
+        Choral Festival 2018, Telkom University
+        Choir
+   <h3> 2. Karangturi International Choir Competition 2019 </h3>
+      • Champion – Folklore Category,  Karangturi International Choir Competition 2019, Telkom University Choir<br><br>
+      • Gold Medal – Folklore Category,  Karangturi International Choir Competition 2019, Telkom University Choir<br><br>
+      • Champion – Mixed Category,  Karangturi International Choir Competition 2019, Telkom University Choir<br><br>
+      • Gold Medal – Mixed Category,  Karangturi International Choir Competition 2019, Telkom University Choir<br><br>
+
 <hr>
 
 <h2> <img src="icon_skill.png" style="width: 25px; height: 25px">  Skills</h2>
@@ -233,19 +244,9 @@ cooperation between people. </p>
 
   <h3>Korean</h3>
   <div class="container">
-    <div class="skills Korean">70%</div>
+    <div class="skills Korean">30%</div>
   </div>
 
-  <h3>Turkish</h3>
-  <div class="container">
-    <div class="skills Turkish">40%</div>
-  </div>
-
-  <h3>German</h3>
-  <div class="container">
-    <div class="skills German">30%</div>
-  </div>
-  <br> <br>
   <hr>
 
 
